Demarcate code added due to lack of NSDMI for aggregates https://bugs.webkit.org/show_bug.cgi?id=175990

Reviewed by Andy Estes.

Source/bmalloc:

* bmalloc/BPlatform.h:
* bmalloc/List.h: Be explicit when initializing m_node to improve readability.
(bmalloc::ListNode::ListNode):

Source/JavaScriptCore:

* domjit/DOMJITEffect.h:
(JSC::DOMJIT::Effect::Effect):
(JSC::DOMJIT::Effect::forWrite):
(JSC::DOMJIT::Effect::forRead):
(JSC::DOMJIT::Effect::forReadWrite):
(JSC::DOMJIT::Effect::forPure):
(JSC::DOMJIT::Effect::forDef):
* runtime/HasOwnPropertyCache.h:
(JSC::HasOwnPropertyCache::Entry::Entry):
(JSC::HasOwnPropertyCache::Entry::operator=): Deleted.
* wasm/WasmFormat.h: Modernize some of the code while I am here. Also
make some comments read well.
(JSC::Wasm::CallableFunction::CallableFunction):
* wasm/js/WebAssemblyFunction.cpp:
(JSC::WebAssemblyFunction::WebAssemblyFunction):
* wasm/js/WebAssemblyWrapperFunction.cpp:
(JSC::WebAssemblyWrapperFunction::create):

Source/WebCore:

* html/canvas/CanvasStyle.h:
* platform/mediastream/IceCandidate.h:
(WebCore::IceCandidate::IceCandidate):
* platform/text/StringWithDirection.h: Replace const String& and String&& constructor
overloads with a single user-defined constructor that takes a String by value to handle
both cases.
(WebCore::StringWithDirection::StringWithDirection):
(WebCore::truncateFromEnd):
* style/StyleUpdate.h:
(WebCore::Style::ElementUpdate::ElementUpdate):
(WebCore::Style::TextUpdate::TextUpdate):

Source/WTF:

* wtf/Compiler.h:

Canonical link: https://commits.webkit.org/192660@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221213 268f45cc-cd09-0410-ab3c-d52691b4dbfc