Source/JavaScriptCore/wasm/WasmFormat.h
@@ -282,26 +282,28 @@ struct WasmExitStubs {
     MacroAssemblerCodeRef wasmToWasm;
 };
 
-typedef void** WasmEntrypointLoadLocation;
+using WasmEntrypointLoadLocation = void**;
 
-// WebAssembly direct calls and call_indirect use indices into "function index space". This space starts with all imports, and then all internal functions.
-// CallableFunction and FunctionIndexSpace are only meant as fast lookup tables for these opcodes, and do not own code.
+// WebAssembly direct calls and call_indirect use indices into "function index space". This space starts
+// with all imports, and then all internal functions. CallableFunction and FunctionIndexSpace are only
+// meant as fast lookup tables for these opcodes and do not own code.
 struct CallableFunction {
+#if !COMPILER_SUPPORTS(NSDMI_FOR_AGGREGATES)
     CallableFunction() = default;
-
     CallableFunction(SignatureIndex signatureIndex, WasmEntrypointLoadLocation code = nullptr)
-        : signatureIndex(signatureIndex)
-        , code(code)
+        : signatureIndex { signatureIndex }
+        , code { code }
     {
     }
+#endif
 
     static ptrdiff_t offsetOfWasmEntrypointLoadLocation() { return OBJECT_OFFSETOF(CallableFunction, code); }
 
-    // FIXME pack the SignatureIndex and the code pointer into one 64-bit value. https://bugs.webkit.org/show_bug.cgi?id=165511
+    // FIXME: Pack signature index and code pointer into one 64-bit value. See <https://bugs.webkit.org/show_bug.cgi?id=165511>.
     SignatureIndex signatureIndex { Signature::invalidIndex };
     WasmEntrypointLoadLocation code { nullptr };
 };
-typedef Vector<CallableFunction> FunctionIndexSpace;
+using FunctionIndexSpace = Vector<CallableFunction>;
 
 } } // namespace JSC::Wasm
 
