Source/WebCore/platform/text/StringWithDirection.h
@@ -46,9 +46,14 @@ namespace WebCore {
 // to the string.
 
 struct StringWithDirection {
+#if !COMPILER_SUPPORTS(NSDMI_FOR_AGGREGATES)
     StringWithDirection() = default;
-    StringWithDirection(const String& string, TextDirection direction) : string { string }, direction { direction } { }
-    StringWithDirection(String&& string, TextDirection direction) : string { WTFMove(string) }, direction { direction } { }
+    StringWithDirection(String string, TextDirection direction)
+        : string { WTFMove(string) }
+        , direction { direction }
+    {
+    }
+#endif
     String string;
     TextDirection direction { LTR };
 };
@@ -66,8 +71,8 @@ inline bool operator!=(const StringWithDirection& a, const StringWithDirection& 
 inline StringWithDirection truncateFromEnd(const StringWithDirection& string, unsigned maxLength)
 {
     if (string.direction == LTR)
-        return StringWithDirection(string.string.left(maxLength), LTR);
-    return StringWithDirection(string.string.right(maxLength), RTL);
+        return { string.string.left(maxLength), LTR };
+    return { string.string.right(maxLength), RTL };
 }
 
 }
